--- a/libraryproject/templates/pages/home.html
+++ b/libraryproject/templates/pages/home.html
@@ -139,7 +139,7 @@
 </div>
 
 <!-- tickets -->
-<div class="sec-content-tickets">
+<div class=" sec-content sec-content-tickets">
   <div class="container">
     <div class="row">
       <div class="col-sm-12 text-center">
