--- a/libraryproject/static/sass/base/_helpers.scss
+++ b/libraryproject/static/sass/base/_helpers.scss
@@ -58,6 +58,19 @@
   width: 100%;
 }
 
+////////////////////////////////
+    //text color setup//
+///////////////////////////////
+.text-white {
+  color: $white;
+}
+
+////////////////////////////////
+    //Background colors//
+///////////////////////////////
+.bg-black {
+  background-color: $black;
+}
 
 ////////////////////////////////
     //Alerts//
