--- a/libraryproject/static/sass/layout/_footer.scss
+++ b/libraryproject/static/sass/layout/_footer.scss
@@ -1,3 +1,10 @@
 // -----------------------------------------------------------------------------
 // This file contains all styles related to the footer of the site/application.
 // -----------------------------------------------------------------------------
+.footer-legal {
+  padding: 10px 0;
+  p {
+    color: $white;
+
+  }
+}
