--- a/libraryproject/templates/tickets/list_ticket.html
+++ b/libraryproject/templates/tickets/list_ticket.html
@@ -3,30 +3,23 @@
 
 
 {% block content %}
-  <section class="ticket-list">
-    {% if ticket_list %}
-      <div class="container">
-        <div class="row">
-          <div class="col-sm-12">
-            <h2>Tickets en proceso:</h2>
-          </div>
-        </div>
+  <section id="ticket-list-section" class="ticket-list">
+    <div class="container">
+      <!-- here goes the ticket list -->
+      {% include 'tickets/ticket_list_partial.html' %}
+      <!-- end ticket list -->
+    </div><!-- end container -->
 
-        <div class="row">
-          {% for ticket in ticket_list  %}
-            <div class="col-sm-4">
-              <div class="card">
-                <h3>{{ ticket.pk }}</h3>
-                <p><i class="fa fa-clock-o"></i>&nbsp;Fecha de creación: {{ ticket.created_at }} </p>
-                <p><i class="fa fa-user"></i>&nbsp;{{ ticket.user.name }}</p>
-                <p>Status: {{ ticket.get_status_display }}</p>
-
-              </div>
-            </div>
-          {% endfor %}
-        </div>
-      </div>
-    {% endif %}
   </section>
+
+  <!-- the modal for ticket cancellation confirm -->
+      <div class="modal fade" id="modal-cancel-user-ticket">
+        <div class="modal-dialog" role="document">
+          <div class="modal-content">
+
+          </div><!-- /.modal-content -->
+        </div><!-- /.modal-dialog -->
+      </div><!-- /.modal -->
+  <!-- end the modal -->
 
 {% endblock content %}
