Rendering my list as VueJS objects and showing the modal component to cancel a ticket. Cancel functionality still in progress

--- a/libraryproject/static/sass/project.scss
+++ b/libraryproject/static/sass/project.scss
@@ -59,7 +59,8 @@
 // 5. Components
 @import
   'components/button',
-  'components/cards';
+  'components/cards',
+  'components/modal';
 
 // 6. Page-specific styles
 @import
@@ -68,4 +69,3 @@
 // 7. Themes
 // @import
 //   'themes/default';
-
