--- a/libraryproject/templates/base.html
+++ b/libraryproject/templates/base.html
@@ -51,7 +51,8 @@
                 <a class="nav-link" href="{% url 'about' %}">Acerca de</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="{% url 'tickets:ticket-list' %}">Mis tickets</a>
+                {# <a class="nav-link" href="{% url 'tickets:ticket-list' %}">Mis tickets</a> #}
+                <a class="nav-link" href="{% url 'tickets:tickets-list-api' %}">Mis tickets</a>
               </li>
               {% if request.user.is_authenticated %}
                 <li class="nav-item">
